--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Philosophy -- History'
 - !lcc 'B'
+- GITenberg
 title: A History of Philosophy in Epitome
 url: http://www.gutenberg.org/ebooks/41412
